# media-editor-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  openglapp2d.h  openglapp3d.h  openglapp_life.h  openglapp_nn.h  openglapp_raytrace.h  openglapp_shadertoyer.h  openglapp_simple_brush.h
3party/: base64.hpp
3party/imgui/: imgui_impl_sdl2.cpp  imgui_stdlib.h
src/: application.cpp  application.h  common.h  helper_general.h  imgui_filesystem.cpp  imgui_filesystem.h  main.cpp  openfileinfo.cpp  openfileinfo.h  thread_pool.h  vec2.h  window.cpp  window.h
src/graphics/: camera.cpp  camera.h  drawable.cpp  drawable.h  entity.cpp  entity.h  gl_context.cpp  gl_context.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_mesh.cpp  gl_mesh.h  gl_rendermanager.cpp  gl_rendermanager.h  gl_shader.cpp  gl_shader.h  gl_shadersources.cpp  gl_shadersources.h  gl_texture.cpp  gl_texture.h  glmesh.cpp  glmesh.h  glshader.cpp  glshader.h  glshadersources.cpp  gltexture.cpp  gltexture.h  graphics_common.cpp  graphics_common.h  hashstring.h  image.cpp  image.h  mesh.cpp  mesh.h  model3d.cpp  model3d.h  orthocamera.cpp  orthocamera.h  shader.cpp  shader.h  (+8 more)
src/raytracing/: BVHBuilder.cpp  BVHBuilder.h  rt_texture_assembler.cpp  rt_texture_assembler.h  utils.h
src/shaders/: brush2d.frag  brush2d.vert  default2d.frag  default2d.vert  default3d.frag  default3d.vert  quad_plane_2d.frag  quad_plane_2d.vert  raytracing.frag  raytracing16bit.frag  shadertoy.frag
